--- a/css/blocks/task.css
+++ b/css/blocks/task.css
@@ -91,6 +91,21 @@
   color: var(--inactive-color);
   border: 1px dashed var(--inactive-color);
   background-color: transparent;
+
+  position: relative;
+  width: 100%;
+  padding: 16px 14px;
+  display: flex;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.25;
+
+  border-left: 6px solid var(--light-gray);
+  border-radius: 8px;
+  background-color: #ffffff;
+  cursor: move;
+  transition: var(--animation);
 }
 
 .task--empty:hover {
